tried to fix wrapping bottom text

--- a/style.css
+++ b/style.css
@@ -424,3 +424,8 @@ ul, ol{
     display: flex;
     align-items: center;
 }
+
+.bottom_copyright{
+    white-space: nowrap;
+  overflow: hidden;
+}
